--- a/src/main/resources/FirstView.fxml
+++ b/src/main/resources/FirstView.fxml
@@ -1,28 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="wallpaper" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fitHeight="400.0" fitWidth="600.0">
+      <ImageView id="parquet" fitHeight="400.0" fitWidth="600.0">
          <image>
             <Image url="@misc/sfondo parquet.jpg" />
          </image>
       </ImageView>
-      <ImageView fitHeight="248.0" fitWidth="250.0" layoutX="172.0" layoutY="71.0">
-         <image>
-            <Image url="@Publisher material/Box noshadow 280x280.png" />
-         </image>
-      </ImageView>
-      <Button fx:id="quitButton" layoutX="499.0" layoutY="356.0" mnemonicParsing="false" onAction="#onQuitButton" prefHeight="30.0" prefWidth="84.0" text="QUIT">
-         <font>
-            <Font name="Calibri Bold" size="18.0" />
-         </font>
-      </Button>
-      <Button fx:id="playButton" layoutX="187.0" layoutY="72.0" mnemonicParsing="false" onAction="#onPlayButton" opacity="0.0" prefHeight="247.0" prefWidth="222.0" />
+      <StackPane prefHeight="150.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <HBox alignment="BOTTOM_RIGHT" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Button fx:id="quitButton" mnemonicParsing="false" onAction="#onQuitButton" prefHeight="30.0" prefWidth="84.0" text="QUIT">
+                     <font>
+                        <Font name="Calibri Bold" size="18.0" />
+                     </font>
+                  </Button>
+               </children>
+               <padding>
+                  <Insets bottom="5.0" right="5.0" />
+               </padding>
+            </HBox>
+            <ImageView fitHeight="248.0" fitWidth="250.0">
+               <image>
+                  <Image url="@Publisher material/Box noshadow 280x280.png" />
+               </image>
+            </ImageView>
+            <Button fx:id="playButton" mnemonicParsing="false" onAction="#onPlayButton" opacity="0.0" prefHeight="247.0" prefWidth="222.0" />
+         </children>
+      </StackPane>
    </children>
 </AnchorPane>
