--- a/src/main/resources/Select_Number_Of_Players.fxml
+++ b/src/main/resources/Select_Number_Of_Players.fxml
@@ -6,41 +6,51 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="465.0" prefWidth="675.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="pane_wall" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="465.0" prefWidth="675.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fitHeight="471.2" fitWidth="682.0">
+      <ImageView id="parquet" fitHeight="471.2" fitWidth="682.0">
          <image>
             <Image url="@misc/sfondo parquet.jpg" />
          </image>
       </ImageView>
-      <Text id="errormessage" layoutX="98.0" layoutY="200.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Insert Your Username and choose the number of Players:" wrappingWidth="485.2680969238281">
-         <font>
-            <Font name="System Bold" size="18.0" />
-         </font>
-      </Text>
-      <TextField fx:id="usernameField" layoutX="193.0" layoutY="239.0" prefHeight="39.0" prefWidth="288.0" promptText="Username">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </TextField>
-      <Button fx:id="submitUsernameAndPlayersButton" layoutX="287.0" layoutY="320.0" mnemonicParsing="false" onAction="#onClickSubmitUsernamePlayerButton" prefHeight="45.0" prefWidth="99.0" style="-fx-border-radius: 15; -fx-background-radius: 15; -fx-background-color: #ffc033;" text="Submit">
-         <font>
-            <Font name="System Bold" size="18.0" />
-         </font>
-      </Button>
-      <ComboBox fx:id="numberPlayersMenu" layoutX="502.0" layoutY="236.0" prefHeight="45.0" prefWidth="132.0" promptText="Select N° Players" style="-fx-background-color: #ffc033; -fx-border-radius: 15; -fx-background-radius: 15;" />
-      <Text id="errormessage" fill="#e43104" layoutX="66.0" layoutY="393.0" strokeType="OUTSIDE" strokeWidth="0.0" underline="true" wrappingWidth="543.2680053710938">
-         <font>
-            <Font size="25.0" />
-         </font>
-      </Text>
-      <ImageView fitHeight="91.0" fitWidth="270.0" layoutX="202.0" layoutY="67.0">
-         <image>
-            <Image url="@Publisher material/Title 2000x618px.png" />
-         </image>
-      </ImageView>
+      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <ImageView fitHeight="91.0" fitWidth="270.0">
+               <image>
+                  <Image url="@Publisher material/Title 2000x618px.png" />
+               </image>
+            </ImageView>
+            <Text id="errormessage" strokeType="OUTSIDE" strokeWidth="0.0" text="Insert Your Username and choose the number of Players:" wrappingWidth="485.2680969238281">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Text>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+               <children>
+                  <TextField fx:id="usernameField" prefHeight="39.0" prefWidth="288.0" promptText="Username">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </TextField>
+                  <ComboBox fx:id="numberPlayersMenu" prefHeight="45.0" prefWidth="132.0" promptText="Select N° Players" style="-fx-background-color: #ffc033; -fx-border-radius: 15; -fx-background-radius: 15;" />
+               </children>
+            </HBox>
+            <Button fx:id="submitUsernameAndPlayersButton" mnemonicParsing="false" onAction="#onClickSubmitUsernamePlayerButton" prefHeight="45.0" prefWidth="99.0" style="-fx-border-radius: 15; -fx-background-radius: 15; -fx-background-color: #ffc033;" text="Submit">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Button>
+            <Text id="errormessage" fill="#e43104" strokeType="OUTSIDE" strokeWidth="0.0" underline="true" wrappingWidth="543.2680053710938">
+               <font>
+                  <Font size="25.0" />
+               </font>
+            </Text>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
