Add the StyleSheet Style.css to FirstView.fxml

--- a/src/main/resources/FirstView.fxml
+++ b/src/main/resources/FirstView.fxml
@@ -28,12 +28,12 @@
 
                   <VBox alignment="BOTTOM_CENTER" prefHeight="276.0" prefWidth="85.0" spacing="20.0">
                      <children>
-                        <Button id="rulesButton" fx:id="rulesButton" mnemonicParsing="false" onAction="#onRulesButtonClicked" prefHeight="34.0" prefWidth="87.0" text="RULES">
+                        <Button id="rulesButton" fx:id="rulesButton" mnemonicParsing="false" onAction="#onRulesButtonClicked" prefHeight="34.0" prefWidth="87.0" stylesheets="@Style.css" text="RULES">
                            <font>
                               <Font name="Calibri Bold" size="19.0" />
                            </font>
                         </Button>
-                        <Button fx:id="quitButtonBeforeRunning" mnemonicParsing="false" onAction="#onQuitButtonBeforeRunning" prefHeight="0.0" prefWidth="84.0" text="QUIT">
+                        <Button fx:id="quitButtonBeforeRunning" mnemonicParsing="false" onAction="#onQuitButtonBeforeRunning" prefHeight="0.0" prefWidth="84.0" stylesheets="@Style.css" text="QUIT">
                            <font>
                               <Font name="Calibri Bold" size="18.0" />
                            </font>
